Only notify accessibility about important network changes

Test: connect to wifi. Verify (through logging) trigger of network change
observer methods, but only accessibility notification for default network
changes. Verify no accessibility notification for signal strength changes.
Bug: 775566
Change-Id: I5ebd4e0b05e0623df1735e8df2fbfde07bd79b25