ash/system/network/tray_network_state_observer.cc
@@ -48,18 +48,18 @@ TrayNetworkStateObserver::~TrayNetworkStateObserver() {
 
 void TrayNetworkStateObserver::NetworkListChanged() {
   purge_icons_ = true;
-  SignalUpdate();
+  SignalUpdate(false /* notify_a11y */);
 }
 
 void TrayNetworkStateObserver::DeviceListChanged() {
-  SignalUpdate();
+  SignalUpdate(false /* notify_a11y */);
 }
 
 // Any change to the Default (primary connected) network, including Strength
 // changes, should trigger a NetworkStateChanged update.
 void TrayNetworkStateObserver::DefaultNetworkChanged(
     const chromeos::NetworkState* network) {
-  SignalUpdate();
+  SignalUpdate(true /* notify_a11y */);
 }
 
 // Any change to the Connection State should trigger a NetworkStateChanged
@@ -67,7 +67,7 @@ void TrayNetworkStateObserver::DefaultNetworkChanged(
 // connected.
 void TrayNetworkStateObserver::NetworkConnectionStateChanged(
     const chromeos::NetworkState* network) {
-  SignalUpdate();
+  SignalUpdate(true /* notify_a11y */);
 }
 
 // This tracks Strength and other property changes for all networks. It will
@@ -75,18 +75,19 @@ void TrayNetworkStateObserver::NetworkConnectionStateChanged(
 // changes.
 void TrayNetworkStateObserver::NetworkPropertiesUpdated(
     const chromeos::NetworkState* network) {
-  SignalUpdate();
+  SignalUpdate(false /* notify_a11y */);
 }
 
-void TrayNetworkStateObserver::SignalUpdate() {
+void TrayNetworkStateObserver::SignalUpdate(bool notify_a11y) {
   if (timer_.IsRunning())
     return;
   timer_.Start(FROM_HERE, base::TimeDelta::FromMilliseconds(update_frequency_),
-               this, &TrayNetworkStateObserver::SendNetworkStateChanged);
+               base::Bind(&TrayNetworkStateObserver::SendNetworkStateChanged,
+                          base::Unretained(this), notify_a11y));
 }
 
-void TrayNetworkStateObserver::SendNetworkStateChanged() {
-  delegate_->NetworkStateChanged();
+void TrayNetworkStateObserver::SendNetworkStateChanged(bool notify_a11y) {
+  delegate_->NetworkStateChanged(notify_a11y);
   if (purge_icons_) {
     network_icon::PurgeNetworkIconCache();
     purge_icons_ = false;
